<resources>

    <string name="app_name">短信助手</string>
    <string name="app_version">v1.0</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">短信助手</string>
    <string name="autosend_add_title">添加自动发送</string>
    <string name="autosend_add_biaoti">标题</string>
    <string name="autosend_add_name">姓名</string>
    <string name="autosend_add_button">+</string>
    <string name="autosend_add_phone">手机号码</string>
    <string name="autosend_add_date">日期</string>
    <string name="autosend_add_time">时间</string>
    <string name="autosend_add_timedefault">7:0</string>
    <string name="autosend_add_sms">短信内容</string>
    <string name="autosend_add_addOK">确认</string>
    <string name="autosend_add_reset">重置</string>
    
    <string-array name="intervallist_preference">
        <item>30秒</item>
        <item>1分钟</item>
        <item>2分钟</item>
        <item>5分钟</item>
        <item>无间隔</item>
    </string-array>
    <string-array name="intervallistvalue_preference">
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
        <item>0</item>
    </string-array>

</resources>