<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#44000000"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="#99000000"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/autosend_add_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/autosend_add_title"
                android:textColor="#99ffffff"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/autosend_add_biaoti"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/autosend_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/autosend_add_name"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/autosend_name_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/autosend_name_addforcontacts" />

            <ImageView
                android:id="@+id/autosend_name_addforcontacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="5dip"
                android:layout_marginLeft="5dip"
                android:src="@drawable/contact" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/autosend_add_phone"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/autosend_phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/autosend_add_date"
            android:textSize="20sp" />

        <Button
            android:id="@+id/autosend_add_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/autosend_add_time"
            android:textSize="20sp" />

        <Button
            android:id="@+id/autosend_add_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/autosend_add_timedefault"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/autosend_add_sms"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/autosend_sms_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/autosend_sms_addforbleesingsms" />

            <ImageView
                android:id="@+id/autosend_sms_addforbleesingsms"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:gravity="center"
                android:src="@drawable/add" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/autosend_addOK"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/autosend_add_addOK" />

            <Button
                android:id="@+id/autosend_reset"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dip"
                android:text="@string/autosend_add_reset" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>