<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#44000000"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="#99000000"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/autore_add_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="添加自动回复"
                android:textColor="#99ffffff"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/autosend_add_biaoti"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/autore_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="关键字（多个关键字用‘-’隔开，若为空则为全部回复）"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/autore_keywords_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="起止时间(若相同则为一直有效)"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/autore_add_startdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dip"
                android:textSize="20sp" />

            <Button
                android:id="@+id/autore_add_starttime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/autosend_add_timedefault"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="到"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/autore_add_enddate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dip"
                android:textSize="20sp" />

            <Button
                android:id="@+id/autore_add_endtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/autosend_add_timedefault"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/autosend_add_sms"
            android:textSize="20sp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/autore_sms_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/autore_sms_addforbleesingsms" />

            <ImageView
                android:id="@+id/autore_sms_addforbleesingsms"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dip"
                android:layout_marginLeft="5dip"
                android:gravity="center"
                android:src="@drawable/add" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/autore_addOK"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/autosend_add_addOK" />

            <Button
                android:id="@+id/autore_reset"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dip"
                android:text="@string/autosend_add_reset" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>